# conduit

./: .gitignore  README.md  conduit.sql  requirements.txt  servers.sql  setup.cfg
conduit/: cleanup.py  functions.py  ircbot.py  module_loader.py  regextest.py  run.py
conduit/data/: bot.cfg
conduit/db/: connect.py  invites.py  messages.py  servers.py  users.py
conduit/modules/: disable.py  invite.py  rank.py  users.py
