[metadata]
name = conduit
author = unendingPattern
author-email = kei.trei.a52@gmail.com
summary = Internet Relay Conduit
license = WTFPL
description-file =
  README.md
home-page = https://unendingpattern.github.io
requires-python = >=3.4
classifier =
  Development Status :: Rolling Release
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Operating System :: OS Independent
  Programming Language :: Python

[files]
packages =
  conduit